[package]
name = "llm-term"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "llm-term"
crate-type = ["cdylib"]

[dependencies]
nix = {version = "0.29.0", features = ["term", "process", "fs"]}
ptyprocess = "0.4.1"
pyo3 = "0.23.3"
rustix = "0.38.44"
