[package]
name = "terminal_env"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "terminal_env"
crate-type = ["cdylib"]

[dependencies]
nix = {version = "0.30.1", features = ["term", "process", "fs"]}
ptyprocess = "0.5.0"
pyo3 = "0.27.1"
rustix = "1.1.2"
